--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #b358dd;
-  
+  background-color: #d4d3d4;
+  background-image: url("./assets/image/image1.jpg");
+
   background-size: cover;
 }
 
