--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-image: url("http://1.bp.blogspot.com/_EZ16vWYvHHg/TSdAoElL0BI/AAAAAAAAV1w/ErtsmSJDpgY/s1600/www.BancodeImagenesGratuitas.com%2B%2528mu3%2529.jpg");
+  background-size: cover;
+  background-repeat: none;
+  min-height: 100vh;  
+  display: flex;
 }
 
 .App-logo {
