--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url("http://1.bp.blogspot.com/_EZ16vWYvHHg/TSdAoElL0BI/AAAAAAAAV1w/ErtsmSJDpgY/s1600/www.BancodeImagenesGratuitas.com%2B%2528mu3%2529.jpg");
+  background-image: url("https://i.pinimg.com/originals/97/c1/6d/97c16d195994553453f3c72098b0ccb4.jpg");
   background-size: cover;
   background-repeat: none;
   min-height: 100vh;  
