--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url("https://www.impulsonegocios.com/wp-content/uploads/2020/09/podcast.jpg");
+  background-image: url("https://i.pinimg.com/originals/97/c1/6d/97c16d195994553453f3c72098b0ccb4.jpg");
   background-size: cover;
   background-repeat: none;
   min-height: 100vh;  
